# vedirect2mqtt

./: .gitignore  Cargo.toml  README.md
src/: config.rs  data.rs  main.rs
