[package]
name = "vedirect2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
rumqttc = "0.17.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serialport = "4.2.0"
tokio = { version = "1.21.2", features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
toml = "0.5.9"

